[gd_scene load_steps=6 format=2]

[ext_resource path="res://sounds/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://bg/blue.png" type="Texture" id=2]
[ext_resource path="res://scenes/gameover.gd" type="Script" id=3]
[ext_resource path="res://bg/—Pngtree—cartoon stereo colored cute button_3972677 (1).png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="GAMEOVER" type="Node2D"]
script = ExtResource( 3 )

[node name="blue" type="Sprite" parent="."]
position = Vector2( 179.633, 323.319 )
scale = Vector2( 1.83969, 2.8893 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.008
anchor_top = 0.1
anchor_right = 0.997
anchor_bottom = 0.302
margin_left = 0.12
margin_right = 0.0799866
margin_bottom = -0.280014
custom_fonts/font = SubResource( 1 )
text = "GAME
OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Label" parent="CanvasLayer"]
anchor_left = 0.189
anchor_top = 0.448
anchor_right = 0.843
anchor_bottom = 0.555
margin_left = 0.716713
margin_top = 1.41525
margin_right = 1.2767
margin_bottom = 0.935242
custom_fonts/font = SubResource( 1 )
text = "Best = 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_score" type="Label" parent="CanvasLayer"]
anchor_left = 0.236
anchor_top = 0.609
anchor_right = 0.839
anchor_bottom = 0.719
margin_left = -16.96
margin_top = -5.76001
margin_right = -4.04001
margin_bottom = -6.16003
custom_fonts/font = SubResource( 1 )
text = "Last = 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_menu" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 99.8934, 473.304 )
scale = Vector2( 0.25, 0.2 )
normal = ExtResource( 4 )

[node name="btn_game" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 104.65, 551.792 )
scale = Vector2( 0.25, 0.2 )
normal = ExtResource( 4 )

[node name="menu" type="Label" parent="CanvasLayer"]
anchor_left = 0.236
anchor_top = 0.726
anchor_right = 0.834
anchor_bottom = 0.836
margin_left = -14.5817
margin_top = 0.226074
margin_right = 0.138336
margin_bottom = -0.17395
custom_fonts/font = SubResource( 1 )
text = "Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game" type="Label" parent="CanvasLayer"]
anchor_left = 0.236
anchor_top = 0.853
anchor_right = 0.867
anchor_bottom = 0.962
margin_left = -2.6895
margin_top = -0.187927
margin_right = 0.150482
margin_bottom = 0.052063
custom_fonts/font = SubResource( 1 )
text = "Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/btn_game" to="." method="_on_btn_game_pressed"]
